@@ -55,7 +55,7 @@ namespace KviKvsCoreSimpleCommands
 		_REGCMD("buttonctl",buttonctl)
 		_REGCMD("codepage",rfc2812wrapper)
 		_REGCMD("ctcp",ctcp)
-		_REGCMD("debug",debug)
+		_REGCMD("debug",debugCKEYWORDWORKAROUND)
 		_REGCMD("delete",deleteCKEYWORDWORKAROUND)
 		_REGCMD("delpopupitem",delpopupitem)
 		_REGCMD("destroy",deleteCKEYWORDWORKAROUND)
@@ -74,6 +74,7 @@ namespace KviKvsCoreSimpleCommands
 		_REGCMD("host",host)
 		_REGCMD("include",parse)
 		_REGCMD("info",rfc2812wrapper)
+		_REGCMD("inject",inject)
 		_REGCMD("invite",rfc2812wrapper)
 		_REGCMD("join",join)
 		_REGCMD("kick",kick)
