@@ -1,6 +1,13 @@
+03 September 2008
+   [HelLViS69]
+   - New KVS command: added 'inject'
+
 29 August 2008
    [HelLViS69 & Pragma]
    - Added STARTTLS protocol
+
+   [HelLViS69]
+   - Added Doxygen comments for documentation creation (wip)
 
 24 August 2008
    [CtrlAltCa]
